@@ -7,7 +7,7 @@ select -AID a000000003000000
 open_sc -security 1 -keyind 0 -keyver 0 -mac_key 404142434445464748494a4b4c4d4e4f -enc_key 404142434445464748494a4b4c4d4e4f // Open secure channel
 delete -AID a00000006203010c0101
 delete -AID a00000006203010c01
-install -file HelloWorld.cap -sdAID a000000003000000 -nvDataLimit 2000 -instParam 00 -priv 2
+install -file HelloWorld.cap -nvDataLimit 2000 -instParam 00 -priv 2
 # getdata
 # close_sc // Close secure channel
 # putkey // Put key
